traces/bug_283.txt
src/femlib/FQuadTree.cpp:260: error: DEAD_STORE
  The value written to &h (type long) is never used.
Showing all 1 steps of the trace


src/femlib/FQuadTree.cpp:260:3: Write of unused value
258.     pi[0]=  root->n>0 ?(int)  root->n : 4 ;
259.     pp[0]=p0;
260.     h=hb;
         ^
261.     do {    
262.       b= pb[l];
